# faiss-rs

./: Cargo.toml
faiss-sys/: Cargo.toml  build.rs
src/: error.rs  macros.rs
src/index/: flat.rs  gpu.rs  id_map.rs  ivf_flat.rs  lsh.rs  mod.rs  pretransform.rs  refine_flat.rs  scalar_quantizer.rs
