[package]
name = "faiss"
description = "High-level bindings for Faiss, the vector similarity search engine"
version = "0.13.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Enet4/faiss-rs"
categories = ["algorithms", "science"]
keywords = ["cbir", "clustering", "index", "similarity"]
readme = "README.md"
edition = "2018"

[features]
gpu = ["faiss-sys/gpu"]
static = ["faiss-sys/static"]
static-blas = ["faiss-sys/static-blas"]
static-omp = ["faiss-sys/static-omp"]
static-faiss = ["faiss-sys/static-faiss"]

[target.'cfg(windows)'.features]
static-auto = ["static-blas", "static-omp", "static-faiss"]

[target.'cfg(target_os = "macos")'.features]
# static-auto does not statically link blas b/c blas is part of
# Accelerate.framework; it cannot be statically linked on macOS
static-auto = ["static-omp", "static-faiss"]

[target.'cfg(target_os = "linux")'.features]
static-auto = ["static-blas", "static-omp", "static-faiss"]

[badges.maintenance]
status = "passively-maintained"

[dependencies.faiss-sys]
version = "0.7"
path = "faiss-sys"

[package.metadata.docs.rs]
features = ["gpu"]

[workspace]
members = ["faiss-sys"]
